	vector now wraps it in as.integer() so it will be source()d
	correctly.  (Related to PR#4361.)

    o	Model fits now add a "dataClasses" attribute to the terms, which
	can be used to check that the variables supplied for
	prediction are of the same type as those used for fitting.
	(It is currently used by predict() methods for classes "lm",
	"mlm", "glm", "lqs" and "ppr".)


UTILITIES

    o	R CMD check  now runs the (Rd) examples with default RNGkind
	(uniform & normal) and set.seed(1).
	example(*, setRNG = TRUE) does the same.

    o	undoc() in `tools' has a new default of	 `use.values = NULL'
	which produces a warning whenever the default values of function
	arguments differ between documentation and code.
	Note that this affects "R CMD check" as well.


DEPRECATED & DEFUNCT

    o	print.coefmat() is defunct, replaced by printCoefmat().

    o	codes() and codes<-() are defunct.

    o	anovalist.lm (replaced in 1.2.0) is now defunct.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.


INSTALLATION CHANGES

    o	The defaults for configure are now --without-zlib
	--without-bzlib --without-pcre.  PCRE >= 4.0 is now required:
	the included PCRE sources have been updated to version 4.4.

    o	configure no longer lists bzip2 and PCRE as `additional
	capabilities' as all builds of R have had them since 1.7.0.




	**************************************************
	*						 *
	*	       1.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.8.1


NEW FEATURES

    o	There is now a "Complex" S3 group generic (a side-effect of
	fixing up the corresponding S4 group generic).

    o	help("regex") now gives a description of the regular expressions
	used in R.

    o   The startup message now shows the R Foundation as copyright
        holder, and includes the R ISBN number and a pointer to the new
        citation() function.
